# FEPOPS

./: .buildinfo  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Explore_DUDE_diversity_set.ipynb  LICENSE.md  README.md  benchmark.py  config.cfg  conftest.py  dude_benchmarking.ipynb  environment.yaml  environment.yml  fepops.fepops_persistent.html  fepops.html  fepops.py  genindex.html  index.html  modules.html  mol_filter.py  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  test.py  tests.py
.doctrees/: environment.pickle  fepops.doctree  fepops.fepops_persistent.doctree  index.doctree  modules.doctree  readme.doctree
.github/workflows/: ci.yaml  documentation.yaml
_modules/: index.html
_modules/fepops/: fepops.html
_modules/fepops/fepops_persistent/: fepops_persistent_abc.html  fepopsdb_json.html  fepopsdb_sqlite.html  utils.html
_sources/: readme.md.txt
benchmark/: Explore_DUDE_diversity_set.ipynb  mol_filter.py
docs/: .buildinfo  conf.py  fepops.fepops_persistent.html  fepops.fepops_persistent.rst  fepops.html  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  fepops.doctree  fepops.fepops_persistent.doctree  index.doctree  modules.doctree
docs/_modules/: fepops.html  index.html
docs/_modules/fepops/: dude_preprocessor.html
docs/_modules/fepops/fepops_persistent/: fepops_persistent_abc.html
docs/_sources/: index.rst.txt
docs/source/: fepops.fepops_persistent.html  fepops.html  modules.html
docsource/: conf.py  fepops.rst  index.rst  modules.rst
docsource/_build/doctrees/: environment.pickle  fepops.doctree  fepops.fepops_persistent.doctree  index.doctree  modules.doctree
docsource/_build/html/: objects.inv  search.html
docsource/_build/html/_modules/fepops/: benchmark.html  fepops.html
docsource/_build/html/_modules/fepops/fepops_persistent/: fepopsdb_json.html  fepopsdb_sqlite.html  utils.html
docsource/_build/html/_sources/: modules.rst.txt
fepops/: __init__.py  __main__.py  fepops.py
fepops/fepops_persistent/: __init__.py  fepops_persistent_abc.py  fepopsdb_json.py  fepopsdb_sqlite.py  utils.py
src/fepops/: __init__.py  __main__.py  benchmark.py  dude_preprocessor.py  fepops.html  fepops.py
src/fepops/fepops_persistent/: __init__.py  fepops_persistent_abc.py  fepopsdb_json.py  fepopsdb_sqlite.py  utils.py
src/fepops/utils/: __init__.py  dude_preprocessor.py  mol_filter.py
test/: tests.py
tests/: tests.py
