[project]
name="Fepops"
version="1.4.0"
description="Python implementation of the FEPOPS molecular descriptors"
authors = [
    {name = "Yan-Kai Chen"},
    {name = "Steven Shave"},
]
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["molecular similarity", "ligand based virtual screening"]

[build-system]
requires=[
    "setuptools>=61.0.0",
    "torch",
    "numpy>=1.19.0",
    "pandas>=1.5.0",
    "rdkit>=2019.09.0.0",
    "scikit-learn>=0.20.4",
    "scipy>=1.7.0",
    "fast_pytorch_kmeans>=0.1.9",
    "tqdm>=4.48.0",
    "rdkit",
    ]
build-backend="setuptools.build_meta"

[tool.black]
skip-string-normalization = true
include = '''
(
    ^/tests/
  | ^/src/
  | ^/setup[.]py
)
'''
exclude = '''
(
    __pycache__
    |.*\.egg-info
)
'''

dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]

[project.scripts]
fepops = "fepops.__main__:fepops_entrypoint"

[tool.setuptools.packages.find]
where = ["src"]