[project]
name="fepops"
version="1.8.0"
description="OpenFEPOPS; A Python implementation of the FEPOPS molecular similarity method"
authors = [
    {name = "Yan-Kai Chen"},
    {name = "Steven Shave"},
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["molecular similarity", "ligand based virtual screening"]
dependencies = [
    "rdkit>=2021.9.5.1",
    "numpy>=1.22.4",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.7.0",
    "torch",
    "fast-pytorch-kmeans>=0.1.9",
    "fire>=0.5.0",
    "tqdm>=4.48.0",
    ]
[build-system]
requires=[
    "setuptools>=61.0.0",
    ]
build-backend="setuptools.build_meta"




[tool.black]
skip-string-normalization = true
include = '''
(
    ^/tests/
  | ^/src/
  | ^/setup[.]py
)
'''
exclude = '''
(
    __pycache__
    |.*\.egg-info
)
'''

[project.scripts]
fepops = "fepops.__main__:fepops_entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/JustinYKC/FEPOPS"

[project.optional-dependencies]
dev = [
    'black==23.3.0',
    'pytest==7.4.0',
    'build==0.10.0',
]

[tool.pytest.ini_options]
"testpaths" = "tests/test*"
