[metadata]
name = fepops
version = 1.0.0
author = Yan-Kai Chen
description = Python implementation of the FEPOPS molecular descriptors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JustinYKC/FEPOPS
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = 
    fepops

python_requires = >=3.8
install_requires =
    numpy>=1.19.0
    pandas>=1.5.0
    rdkit>=2019.09.0.0
    scikit-learn>=0.20.4
    scipy>=1.7.0
    PyTorch>= 1.0.0
    kmeans-pytorch>=0.3

[tool:pytest]
testpaths = test
