[metadata]
name = fepops
version = 1.3.0
author = Yan-Kai Chen
description = Python implementation of the FEPOPS molecular descriptors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JustinYKC/FEPOPS
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = 
    fepops

python_requires = >=3.9
install_requires =
    numpy>=1.19.0
    pandas>=1.5.0
    rdkit>=2019.09.0.0
    scikit-learn>=0.20.4
    scipy>=1.7.0
    Pytorch>=1.0.0
    fast_pytorch_kmeans>=0.1.9
    tqdm>=4.48.0

[tool:pytest]
testpaths = test
